--- a/src/App.css
+++ b/src/App.css
@@ -1,13 +1,13 @@
 
 .main-container {
     padding: 3rem;
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-    border: 1px solid black;
+    /* position: absolute; */
+    /* top: 50%; */
+    /* left: 50%; */
+    /* transform: translate(-50%, -50%); */
+    border: 1px solid #b6a6a6;
     border-radius: 3vw 4vw 8vw 2vw;
-    box-shadow: 0 0 0.25em 0.25em rgba(0, 0, 0, 0.25);
+    box-shadow: 0 0 0.25em 0.25em rgba(0, 0, 0, 0.15);
 }
 
 a {
