--- a/src/App.css
+++ b/src/App.css
@@ -1,10 +1,6 @@
-
 .main-container {
-    padding: 3rem;
-    /* position: absolute; */
-    /* top: 50%; */
-    /* left: 50%; */
-    /* transform: translate(-50%, -50%); */
+    padding: 2rem;
+    margin: 2rem auto;
     border: 1px solid #b6a6a6;
     border-radius: 3vw 4vw 8vw 2vw;
     box-shadow: 0 0 0.25em 0.25em rgba(0, 0, 0, 0.15);
@@ -13,9 +9,15 @@
 a {
     text-decoration: none;
 }
+
 .float-right {
     float: right;
 }
-.fw-normal{
-        font-weight: normal;
+
+.fw-normal {
+    font-weight: normal;
+}
+
+.error {
+    color: rgb(206, 13, 13);
 }
